tests/machine/x/clj/substring_builtin.clj
(ns main)

(defn -main []
  (println (.substring "mochi" 1 4))
)

(-main)
